# sagemaker-tensorflow-training-toolkit

./: .coverage  .coveragerc  .coveragerc_py27  .coveragerc_py38  .flake8  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README.rst  VERSION  buildspec-container-pr.yml  buildspec-container-tf2-pr.yml  buildspec-deploy.yml  buildspec-dlc-cpu-tests.yml  buildspec-dlc-gpu-tests.yml  buildspec-gen-cpu-tests.yml  buildspec-gen-gpu-tests.yml  buildspec-integ.yml  buildspec-local-cpu.yml  buildspec-release.yml  buildspec-toolkit.yml  buildspec-unit.yml  buildspec.yml  pytest.ini  setup.cfg  setup.py  test-web-hook  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: README.md  execute_tensorflow_training.py  execute_tensorflow_training_dist.py
benchmarks/horovod-resnet/: bench.sh  execute_horovod_training.py  (+1 more)
build_scripts/: docker_image_creator.py
cpp/pipemode/: CMakeLists.txt
cpp/pipemode/PipeReader/: CMakeLists.txt  PipeReader.cpp  PipeReader.hpp  RecordReader.cpp  RecordReader.hpp
cpp/pipemode/RecordIOReader/: CMakeLists.txt  RecordIOReader.cpp  RecordIOReader.hpp
cpp/pipemode/test/: CMakeLists.txt
cpp/pipemode/test/testPipeReader/: CMakeLists.txt  TestPipeReader.cpp  TestPipeReader.hpp  TestRecordReader.cpp  TestRecordReader.hpp  common.cpp  common.hpp
cpp/pipemode/test/testRecordIOReader/: CMakeLists.txt  TestRecordIOReader.cpp  TestRecordIOReader.hpp
docker/: Dockerfile.cpu  Dockerfile.gpu
examples/: script_mode_train_any_tf_script_in_sage_maker.ipynb
resources/: changehostname.c
scripts/: build_all.py  publish_all.py
test/: conftest.py  test_proxy_client.py  test_run.py  test_serve.py  test_trainer.py  utils.py
test-toolkit/: __init__.py
(+241 files in other folders)
